<resources>
    <string name="app_name">Cuisine Quest</string>
    <string name="welcome_to_food_planner">Welcome to Food Planner</string>
    <string name="username">Username:</string>
    <string name="enter_your_email_login">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="food_planner">Food Planner</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_email">Enter your email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="scroll_view">Scroll View</string>
    <string name="detail_fragment">fragment detail</string>
    <string name="home_fragment">home Fragment</string>
    <string name="tv_countries">Countries:</string>
    <string name="web_id">AIzaSyAyBeZbkglQ1jBdTmhGC0wkD0IpjjqzcHA</string>
    <string name="btn_signOutText">SignOut</string>
    <string name="tv_favorite_loading">Loading...</string>
    <string name="plans">Plans</string>
    <string name="delete_from_plan_btn_text">Delete</string>
    <string name="default_web_client_id">109697999853-r204auhj03ft0ba030qsnlhl16ofi673.apps.googleusercontent.com</string>
    <string name="signup_textview">SignUp</string>
    <string name="login_btn_text">Login</string>
    <string name="don_t_have_an_account_">Don\'t have an account?</string>
    <string name="skip">Skip</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="delete">Delete</string>
    <string name="ingredients">Ingredients:</string>
    <string name="steps">Steps:</string>
    <string name="meal_of_the_day">Meal of the day:</string>
    <string name="categories">Categories:</string>
    <string name="countries_chip">Countries</string>
    <string name="categories_chip">Categories</string>
    <string name="meals_chip">Meals</string>
    <string name="ingredient_chip">Ingredient</string>
    <string name="there_are_no_favorite_meals">There are no Favorite meals</string>
    <string name="there_are_no_plans_added">There are no Plans added</string>
</resources>