<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    android:backgroundTint="?android:attr/colorPrimary"
    android:fitsSystemWindows="true"

    tools:context=".loginScreen.view.LoginScreen"
    tools:layout_editor_absoluteX="2dp"
    tools:layout_editor_absoluteY="15dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login_animationjson" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/boldddd"
        android:text="@string/food_planner"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="SignUp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_mail_login_username"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="452dp"
        android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="6dp"
        android:hint="@string/enter_your_email_login"
        android:padding="12dp"
        app:circularflow_radiusInDP="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_login_password"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginBottom="392dp"
        android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/password"
        android:drawableEnd="@drawable/eye_password_show"
        android:drawablePadding="6dp"
        android:filterTouchesWhenObscured="true"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"

        android:padding="12dp"
        app:circularflow_radiusInDP="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_mail_login_username"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/et_mail_login_username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/rounded_edittext_background"
        android:fontFamily="@font/bolditalicc"
        android:text="Login"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Don't have an account?"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageView
        android:id="@+id/iv_login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/google_icon_logo" />

    <ImageView
        android:id="@+id/iv_login_x"
        android:layout_width="102dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_login_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_login_google"
        app:srcCompat="@drawable/twitter_x_icon" />

    <TextView
        android:id="@+id/tv_guestMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="Guest Mode"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>